--- a/src/MarketplaceCompleto.App/appsettings.json
+++ b/src/MarketplaceCompleto.App/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-MarketplaceCompleto.App-c9c4d1bf-91b6-4c2a-b0f8-c721c73b5812;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=MarketplaceCompleto;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
