--- a/src/MarketplaceCompleto.Data/MarketplaceCompleto.Data.csproj
+++ b/src/MarketplaceCompleto.Data/MarketplaceCompleto.Data.csproj
@@ -7,8 +7,17 @@
 
   <ItemGroup>
     <Folder Include="Repository\" />
-    <Folder Include="Mappings\" />
     <Folder Include="Context\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.10" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="6.0.10" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.10" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\MarketplaceCompleto.Business\MarketplaceCompleto.Business.csproj" />
   </ItemGroup>
 
 </Project>
