Implementa lógica para upload de imagem na controller de Produto

--- a/src/MarketplaceCompleto.App/MarketplaceCompleto.App.csproj
+++ b/src/MarketplaceCompleto.App/MarketplaceCompleto.App.csproj
@@ -23,4 +23,8 @@
     <ProjectReference Include="..\MarketplaceCompleto.Data\MarketplaceCompleto.Data.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\imagens\" />
+  </ItemGroup>
+
 </Project>
