Refatora program.cs para pasta Configurations

--- a/src/MarketplaceCompleto.App/Properties/launchSettings.json
+++ b/src/MarketplaceCompleto.App/Properties/launchSettings.json
@@ -8,13 +8,31 @@
     }
   },
   "profiles": {
-    "MarketplaceCompleto.App": {
+    "MarketplaceCompleto - Dev": {
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
-      "applicationUrl": "https://localhost:7017;http://localhost:5246",
+      "applicationUrl": "https://localhost:7017;http://localhost:5017",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
+      }
+    },
+    "MarketplaceCompleto - Stage": {
+      "commandName": "Project",
+      "dotnetRunMessages": true,
+      "launchBrowser": true,
+      "applicationUrl": "https://localhost:7017;http://localhost:5017",
+      "environmentVariables": {
+        "ASPNETCORE_ENVIRONMENT": "Staging"
+      }
+    },
+    "MarketplaceCompleto - Prod": {
+      "commandName": "Project",
+      "dotnetRunMessages": true,
+      "launchBrowser": true,
+      "applicationUrl": "https://localhost:7017;http://localhost:5017",
+      "environmentVariables": {
+        "ASPNETCORE_ENVIRONMENT": "Production"
       }
     },
     "IIS Express": {
