--- a/src/MarketplaceCompleto.Business/MarketplaceCompleto.Business.csproj
+++ b/src/MarketplaceCompleto.Business/MarketplaceCompleto.Business.csproj
@@ -6,10 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Notifications\" />
-    <Folder Include="Validations\" />
-    <Folder Include="Models\" />
-    <Folder Include="Services\" />
+    <PackageReference Include="FluentValidation" Version="11.6.0" />
   </ItemGroup>
 
 </Project>
